<resources>
    <string name="app_name">CSAcademy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Get more out of CSAcademy</string>
    <string name="nav_header_subtitle">Login or Register</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="signup">SignUp</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>


    <string name="verify_email_message">To continue, verify your email.</string>
    <string name="welcome_demo_message">Welcome Message</string>
    <string name="verify_link_send">Verification link sent to your email account.<br /> Go to your email account and verify it.</string>
    <string name="forgot_password">Forgot password? </string>
    <string name="something_went_wrong"><span color="red">Something went wrong!</span></string>
    <string name="verify_email">Verify Email</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logout">Logout</string>

    <!--Course container-->
    <string name="course_title">Some Title</string>
    <string name="course_author">Some Author</string>
    <string name="course_price">Free</string>
    <string name="featured_courses">Featured Courses</string>
    <string name="start_learning">Start Learning</string>

    <!--Course lesson layout-->
    <string name="prev">Prev</string>
    <string name="next">Next</string>

</resources>
