<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/course_container_layout"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/course_image_view"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <TextView
            android:id="@+id/course_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/course_title"/>
        <TextView
            android:id="@+id/course_author_text_vew"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/course_author"/>
        <TextView
            android:id="@+id/course_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:text="@string/course_price"/>

    </LinearLayout>


    </android.support.v7.widget.CardView>
