<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools">

    <Button
        android:id="@+id/login_header_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/login"
        android:textSize="@dimen/text_heading"
        android:elevation="4dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/login_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_header_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:elevation= "4dp"
        android:text="@string/signup"
        android:textSize="@dimen/text_heading"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/login_header_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_header_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@color/colorPrimaryDark"
        android:text="Invalid Username or password"
        android:textSize="16sp"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:id="@+id/login_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_text_view"
        android:layout_margin="@dimen/fab_margin"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/login_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorGreyLight"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="@dimen/text_heading"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorGreyLight"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="@dimen/text_heading"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorAccentDark"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:text="@string/forgot_password"/>
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/fab_margin"
                android:elevation="4dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                android:text="@string/login"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/register_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_full_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_full_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorGreyLight"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="@dimen/text_heading"
                    android:inputType="text"
                    android:hint="@string/full_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorGreyLight"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="@dimen/text_heading"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorGreyLight"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="@dimen/text_heading"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_confirm_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_confirm_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorGreyLight"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="@dimen/text_heading"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/fab_margin"
                android:elevation="4dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                android:text="@string/signup"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>